<resources>
    <string name="app_name">Fizz-Buzz</string>
    <string name="boutton_valider">Validate</string>
	<string name="first_multiple_title">First multiple</string>
	<string name="second_multiple_title">Second multiple</string>
	<string name="limit_title">Limit</string>
	<string name="second_word_title">Second word</string>
	<string name="first_word_title">First word</string>
	<string name="message_error_fill_multiple">The multiple must be different from zero</string>
	<string name="message_error_fill_limit">The limit must be bigger than zero</string>
	<string name="message_error_fill_limit_too_big">The limit is too big</string>
</resources>